# NextMCP

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLATFORM_ARCHITECTURE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml  test.yml
docs/: ARCHITECTURE.md  ENV_SETUP.md  HOST_INTEGRATION.md  MIGRATION_GUIDE.md  OAUTH_TESTING_SETUP.md
examples/async_weather_bot/: README.md  app.py
examples/auth/: combined_auth_server.py  complete_oauth_server.py  github_oauth_server.py  google_oauth_server.py  manifest_server.py  multi_provider_server.py  oauth_token_helper.py  session_management_example.py
examples/auth_api_key/: README.md  server.py
examples/auth_jwt/: README.md  generate_token.py  server.py
examples/auth_rbac/: README.md  server.py
examples/blog_server/: README.md  nextmcp.config.yaml  server.py
examples/blog_server/prompts/: __init__.py  workflows.py
examples/blog_server/resources/: __init__.py  blog_resources.py
examples/blog_server/tools/: __init__.py  posts.py
examples/deployment_docker/: .env.example  README.md  app.py  requirements.txt
examples/deployment_simple/: README.md  app.py
examples/knowledge_base/: README.md  app.py
examples/metrics_example/: README.md  app.py
examples/plugin_example/: README.md  app.py
examples/plugin_example/plugins/: math_plugin.py  string_plugin.py  timing_plugin.py
examples/security_validation/: README.md  insecure_server.py  secure_server.py  validate_custom.py
examples/weather_bot/: README.md  app.py  config.yaml  manifest.json
examples/websocket_chat/: README.md  client.py  server.py
hooks/: pre-commit
nextmcp/: __init__.py  cli.py  config.py  core.py  discovery.py  logging.py  middleware.py  plugins.py  prompts.py  resources.py  tools.py
nextmcp/auth/: __init__.py  errors.py  manifest.py  middleware.py  oauth.py  providers.py  request_middleware.py
nextmcp/metrics/: collector.py  config.py  middleware.py  registry.py  types.py
nextmcp/metrics/exporters/: json_exporter.py  prometheus.py
nextmcp/session/: session_store.py
nextmcp/templates/docker/: .dockerignore.template  Dockerfile.template  docker-compose.yml.template
nextmcp/transport/: websocket.py  ws_client.py
scripts/: install-hooks.sh  setup_env.sh
securemcp/: __init__.py  cli.py  config.py  core.py  logging.py  middleware.py  tools.py
securemcp/transport/: __init__.py  websocket.py  ws_client.py
tests/: __init__.py  test_async.py  test_auth_providers.py  test_core.py  test_discovery.py  test_integration_discovery.py  test_metrics.py  test_middleware.py  test_oauth.py  test_oauth_integration.py  test_rbac.py  test_resources.py  test_tools.py  test_websocket.py
